[gd_scene load_steps=4 format=3 uid="uid://bx8ftewx3absc"]

[ext_resource type="Script" path="res://scenes/tools/tween_viewer.gd" id="1_8chkk"]
[ext_resource type="Texture2D" uid="uid://dosvhm8w1ue02" path="res://art/planet-128/planet-128.png" id="1_scmph"]

[sub_resource type="CanvasTexture" id="CanvasTexture_m3ceu"]
diffuse_texture = ExtResource("1_scmph")

[node name="TweenViewer" type="Node2D"]
script = ExtResource("1_8chkk")

[node name="BackControl" type="Control" parent="."]
custom_minimum_size = Vector2(960, 540)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="background" type="ColorRect" parent="BackControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.223529, 0.223529, 0.298039, 1)

[node name="floor" type="ColorRect" parent="BackControl"]
custom_minimum_size = Vector2(127, 127)
offset_left = 312.0
offset_top = 387.0
offset_right = 439.0
offset_bottom = 514.0

[node name="rule" type="ColorRect" parent="BackControl"]
offset_left = 374.0
offset_top = 87.0
offset_right = 379.0
offset_bottom = 444.0
color = Color(0.466667, 0.470588, 0.490196, 1)

[node name="Control" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(240, 540)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 240.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "transition type"

[node name="TRANSOptionButton" type="OptionButton" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "TRANS_SINE"
popup/item_1/text = "TRANS_LINEAR"
popup/item_1/id = 1

[node name="HSeparator" type="HSeparator" parent="Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Other parameter"

[node name="OptionButton2" type="OptionButton" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "good"
popup/item_1/text = "bad"
popup/item_1/id = 1

[node name="HSeparator2" type="HSeparator" parent="Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel3" type="RichTextLabel" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "time"

[node name="TIMETextEdit" type="TextEdit" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
text = "1.0"

[node name="HSeparator3" type="HSeparator" parent="Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="GOButton" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Tween"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(376, 295)
texture = SubResource("CanvasTexture_m3ceu")

[node name="Start" type="Marker2D" parent="."]
position = Vector2(376, 89)

[node name="Stop" type="Marker2D" parent="."]
position = Vector2(376, 450)

[connection signal="item_selected" from="Control/Panel/VBoxContainer/TRANSOptionButton" to="." method="_on_trans_option_button_item_selected"]
[connection signal="button_up" from="Control/Panel/VBoxContainer/GOButton" to="." method="_on_go_button_button_up"]
